--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -8,7 +8,7 @@ header {
     a {
       text-decoration: none;
       &:active {
-        color: rgb(49, 48, 49);
+        color: hue($color: #0BE10B );
       }
     }
     nav {
