--- a/src/styles/_link.scss
+++ b/src/styles/_link.scss
@@ -1,5 +1,7 @@
 .link{
-    color: #ff840096;
-    font-size: 120%
+    color: #ff330082;
+    font-size: 140%;
+    text-decoration: underline;
+    font-weight: bold;
 
 }
