--- a/src/styles/modules/_home.scss
+++ b/src/styles/modules/_home.scss
@@ -63,7 +63,7 @@
     // background-color: black;
     img {
       // padding: 0px 20px;
-      background-color: hsla(0,0,0,0.5);
+      background-color: #00000080;
       width: 100%;
       display: block;
       margin: 0 auto;
@@ -80,7 +80,7 @@
     // background-color: black;
     width: 100%;
     justify-content: center ;
-    background-color: hsl(240,1,30);
+    background-color: #4c4c4d;
     // background-color: teal;
     margin-bottom: 50px;
     border-radius: 5px;
@@ -354,7 +354,7 @@
   .footer {
     // border-top: 3px solid white;
     text-align: center;
-    background-color: hsla(0,0,0,0.5);
+    background-color: #00000080;
     padding: 15px;
     p {
       margin: 0px;
