--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,30 +1,30 @@
 // Color Pallete based on https://coolors.co/0b132b-1c2541-3a506b-5bc0be-6fffe9;
 // 1 - 10
 // 10 is darkest, 1 is lightest
-$black: hsl(225, 40, 18);
-$blue-8: hsl(225, 40, 18);
-$blue-5: hsl(213, 30, 32);
-$blue-3: hsl(195,53,79);
-$teal-7: hsl(179, 44, 55);
-$teal-5: hsl(171, 100, 72);
+$black: #1c2540;
+$blue-8: #1c2540;
+$blue-5: #394f6a;
+$blue-3: #add8e6;
+$teal-7: #5abfbd;
+$teal-5: #70ffea;
 
 // Additional Colors
-$beige-5: rgb(248,247,227);
-$pink-5: rgb(240,80,113);
-$gray-3: hsl(0,0,90);
-$gray-35: hsl(0,0,85);
-$gray-4: hsl(0,0,70);
-$gray-5: hsl(0,0,50);
-$gray-6: hsl(0,0,40);
-$gray-7: hsl(0,0,30);
-$gray-8: hsl(0,0,20);
-$gray-9: hsl(0,0,15);
-$gray-10: hsl(0,0,10);
+$beige-5: #f8f7e3;
+$pink-5: #f05071;
+$gray-3: #e6e6e6;
+$gray-35: #d9d9d9;
+$gray-4: #b3b3b3;
+$gray-5: #808080;
+$gray-6: #666666;
+$gray-7: #4d4d4d;
+$gray-8: #333333;
+$gray-9: #262626;
+$gray-10: #1a1a1a;
 
 // More Colors
-$dark-9: rgb(19,20,23);
-$dark-6: rgb(44,48,58);
-$dark-7: rgb(30,31,38);
+$dark-9: #131417;
+$dark-6: #2c303a;
+$dark-7: #1e1f26;
 $yellow-5: #FFFF01;
 $yellow-6: #EDE400;
 
